--- a/MultiLanguageWebApplication/Views/Shared/_Layout.cshtml
+++ b/MultiLanguageWebApplication/Views/Shared/_Layout.cshtml
@@ -4,39 +4,56 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <link rel="stylesheet" href="~/Content/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/Content/css/MultiLanguage.css" />
+    <script type="text/javascript" src="~/Content/js/solid.js"></script>
+    <script type="text/javascript" src="~/Content/js/fontawesome.js"></script>
+    <script type="text/javascript" src="~/Content/js/jquery-3.3.1.slim.js"></script>
+    <script type="text/javascript" src="~/Content/js/popper.js"></script>
+    <script type="text/javascript" src="~/Content/js/bootstrap.js"></script>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+    <div class="wrapper">
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <h4>
+                    <a href="@Url.Action("Index", "Home")">
+                        Multi Language
+                    </a>
+                </h4>
             </div>
+            <ul class="list-unstyled">
+                <li>
+                    <a href="@Url.Action("AddLanguage", "Home")">Add Language</a>
+                </li>
+                <li>
+                    <a href="@Url.Action("AddResource", "Home")">Add Resources</a>
+                </li>
+            </ul>
+        </nav>
+
+        <!-- Page Content  -->
+        <div id="content">
+            @RenderBody()
+        </div>
+    </div>
+    <div class="navbar navbar-inverse navbar-fixed-top" style="display:none">
+        <div class="container">
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Add Language", "AddLanguage", "Home")</li>
+                    <li>@Html.ActionLink("Add Resources", "AddResource", "Home")</li>
                 </ul>
             </div>
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
 </body>
 </html>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#sidebarCollapse').on('click', function () {
+            $('#sidebar').toggleClass('active');
+        });
+    });
+</script>
