--- a/MultiLanguageWebApplication/Views/Shared/_Layout.cshtml
+++ b/MultiLanguageWebApplication/Views/Shared/_Layout.cshtml
@@ -5,12 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <link rel="stylesheet" href="~/Content/css/bootstrap.css" />
+    <link rel="stylesheet" href="~/Content/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="~/Content/css/responsive.bootstrap4.min.css">
+    <link rel="stylesheet" href="~/Content/css/buttons.bootstrap4.min.css">
     <link rel="stylesheet" href="~/Content/css/MultiLanguage.css" />
     <script type="text/javascript" src="~/Content/js/solid.js"></script>
     <script type="text/javascript" src="~/Content/js/fontawesome.js"></script>
     <script type="text/javascript" src="~/Content/js/jquery-3.3.1.slim.js"></script>
     <script type="text/javascript" src="~/Content/js/popper.js"></script>
     <script type="text/javascript" src="~/Content/js/bootstrap.js"></script>
+    <script type="text/javascript" src="~/Content/js/jquery.js"></script>
+    <script type="text/javascript" src="~/Content/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="~/Content/js/dataTables.bootstrap4.min.js"></script>
+    <script type="text/javascript" src="~/Content/js/dataTables.responsive.min.js"></script>
+    <script type="text/javascript" src="~/Content/js/responsive.bootstrap4.min.js"></script>
+    <script type="text/javascript" src="~/Content/js/dataTables.buttons.min.js"></script>
+    <script type="text/javascript" src="~/Content/js/Validation.js"></script>
 </head>
 <body>
     <div class="wrapper">
