--- a/MultiLanguageWebApplication/Views/Home/AddResource.cshtml
+++ b/MultiLanguageWebApplication/Views/Home/AddResource.cshtml
@@ -22,8 +22,7 @@
                             <div class="row mb-3">
                                 <label for="inputText" class="col-sm-2 col-form-label">Language</label>
                                 <div class="col-sm-10">
-                                    <select class="form-control">
-                                        <option value="0">not selected</option>
+                                    <select class="form-control" id="sltLanguage">
                                     </select>
                                 </div>
                             </div>
@@ -47,3 +46,38 @@
         </div>
     </section>
 </main>
+<script type="text/javascript">
+    $("document").ready(function () {
+        ListLanguage();
+        ListLanguageResource();
+    });
+
+    function ListLanguageResource() {
+
+    }
+
+    function ListLanguage() {
+        $.ajax({
+            type: "GET",
+            url: "/MultiLanguage/SelectLanguageDetails",
+            data: { languageID: 0 },
+            contentType: "application/json",
+            headers: {
+                'Access-Control-Allow-Origin': '*',
+            },
+            error: function (err) {
+                console.log(err, 'ajax ListLanguage error...');
+            }
+        }).done(function (response) {
+            if (response != null && response.length > 0) {
+
+                for (i = 0; i < response.length; i++) {
+                    $('#sltLanguage')
+                        .append($("<option></option>")
+                        .attr("value", response[i].LanguageID)
+                        .text(response[i].Language));
+                }
+            }
+        });
+    }
+</script>
